# observability-platform

./: .gitignore  AGENTS.md  Caddyfile  README.md  docker-compose.yml  package-lock.json  package.json  web-observability-platform-roadmap.md
analysis/: anomaly.py  dependency_graph.py  main.py  report.py  requirements.txt  third_party.py  web_vitals.py
api/: Dockerfile  drizzle.config.ts  package.json
api-rust/: Cargo.toml
api-rust/src/: auth.rs  config.rs  main.rs  metrics.rs  minio.rs
api-rust/src/analysis/: anomaly.rs  dependency_graph.rs  mod.rs  report.rs  third_party.rs  web_vitals.rs
api-rust/src/db/: indexer.rs  mod.rs  pool.rs  schema.rs
api-rust/src/routes/: auth.rs  health.rs  mod.rs  pages.rs  requests.rs  sessions.rs  ws.rs
api-rust/src/search/: client.rs  index_rules.rs  indexer.rs  mod.rs  routes.rs
api-rust/src/timeline/: merger.rs
api/drizzle/: 0000_fantastic_maria_hill.sql  0001_awesome_black_panther.sql
api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
api/src/: auth.ts  index.ts  minio.ts
api/src/db/: indexer.ts  migrate.ts  pool.ts  post-migration.sql  schema.ts
api/src/middleware/: metrics.ts  tenant.ts
api/src/routes/: pages.ts  requests.ts  sessions.ts  ws.ts
api/src/search/: index-mapper.ts  indexer.ts  routes.ts
api/src/timeline/: merger.ts
collector/: Dockerfile  package.json  tsconfig.json
collector/src/: har.ts  index.ts  kafka.ts  minio.ts  queue.ts  topics.ts
collector/src/instrumentation/: dom-observer.ts  js-runtime.ts  network.ts  screenshot.ts  snapshot.ts  storage.ts
dashboard/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  store.ts
dashboard/src/components/: Layout.tsx  TimelineCanvas.tsx
dashboard/src/pages/: DomExplorer.tsx  NetworkExplorer.tsx  Search.tsx  SessionDetail.tsx  SessionList.tsx  StorageExplorer.tsx
grafana/: dashboard.json
k6/: load-test.js
k8s/: collector-job.yaml  deployment.yaml
launcher/: server.js
launcher/public/: index.html  script.js  style.css
processing/: Cargo.toml  Dockerfile
processing/src/: compressor.rs  main.rs  parser.rs  processor.rs  storage.rs
