[package]
name = "observability-processor"
version = "0.1.0"
edition = "2024"
description = "High-performance stream processor for observability platform - zero-copy parsing, SIMD compression"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nom = "8"
zstd = { version = "0.13", features = ["zstdmt", "experimental"] }
rust-s3 = "0.36"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
axum = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
